--- a/Arbocity - Git/mapa.html
+++ b/Arbocity - Git/mapa.html
@@ -199,8 +199,9 @@
     });
 
     function initMap() {
-      const brasil = [-14.235004, -51.92528];
-      map = L.map('map').setView(brasil, 4);
+  const portoAlegre = [-30.032735, -51.230073];
+  map = L.map('map').setView(portoAlegre, 16);
+
 
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; OpenStreetMap contributors',
